test/fail/Issue1444.agda
module _ (R : Set) where

{-# REWRITE R #-}
